Prevent horizontal scrolling w/ vertical scrollbar

--- a/css/seenet.scss
+++ b/css/seenet.scss
@@ -6,6 +6,7 @@ $desat_color:#5e6168;
 
 html {
     width:100vw;
+    overflow-x:hidden;
 }
 
 body {
